[package]
name = "cosmos-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
cosmos = { git = "https://github.com/fpco/cosmos-rs.git", rev = "d4c00cf6bd5462d854ad499ac5968b3db404474f" }
regex = "1.10.5"
tokio = { version = "1.38.0", features = ["full"] }
