[package]
name = "cosmos-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.86", features = ["backtrace"] }
clap = { version = "4.5.7", features = ["derive", "env"] }
cosmos = { git = "https://github.com/fpco/cosmos-rs.git", rev = "refs/pull/33/head" }
regex = "1.10.5"
tokio = { version = "1.38.0", features = ["full"] }
